--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,7 @@ AllCops:
 
 Metrics/BlockLength:
   Exclude:
+    - 'lib/hydra/works/characterization/fits_document.rb'
     - 'spec/**/*.rb'
 
 # By default RSpec/MessageSpies has the following:
